// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared/UI/Accordion Custom Component 1`] = `
<button
  aria-expanded={false}
  className="css-h2soi5-Accordion"
  id="headlessui-disclosure-button-3"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  type="button"
>
  <h2
    className="css-gxuocn-Typography-Accordion e1eqcpp10"
  >
    Do you know forest restoration app?
  </h2>
  <svg
    className="css-tcqes-Accordion"
    fill="currentColor"
    viewBox="0 0 20 20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`Storyshots Shared/UI/Accordion Primary 1`] = `
<button
  aria-expanded={false}
  className="css-h2soi5-Accordion"
  id="headlessui-disclosure-button-undefined"
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  type="button"
>
  <h2
    className="css-gxuocn-Typography-Accordion e1eqcpp10"
  >
    Do you know forest restoration app?
  </h2>
  <svg
    className="css-tcqes-Accordion"
    fill="currentColor"
    viewBox="0 0 20 20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M14.707 12.707a1 1 0 01-1.414 0L10 9.414l-3.293 3.293a1 1 0 01-1.414-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 010 1.414z"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`Storyshots Shared/UI/Button Contained 1`] = `
<button
  className="css-1xxozgk-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Disabled 1`] = `
<button
  className="css-1spcpzm-Button e1p27jrl0"
  color="primary"
  disabled={true}
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Full Width 1`] = `
<button
  className="css-14vwuej-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Large 1`] = `
<button
  className="css-15wiyrp-Button e1p27jrl0"
  color="primary"
  size="large"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Link 1`] = `
<a
  className="css-70sqgc-Button e1p27jrl0"
  color="primary"
>
  My Button
</a>
`;

exports[`Storyshots Shared/UI/Button Medium 1`] = `
<button
  className="css-1xxozgk-Button e1p27jrl0"
  color="primary"
  size="medium"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button No Shadow 1`] = `
<button
  className="css-jccqdr-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Outlined 1`] = `
<button
  className="css-3ql8e7-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Primary 1`] = `
<button
  className="css-1xxozgk-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Rounded 1`] = `
<button
  className="css-1j7bi6p-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Secondary 1`] = `
<button
  className="css-10ji96a-Button e1p27jrl0"
  color="secondary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Small 1`] = `
<button
  className="css-gpj9d3-Button e1p27jrl0"
  color="primary"
  size="small"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Button Text 1`] = `
<button
  className="css-h5zwan-Button e1p27jrl0"
  color="primary"
>
  My Button
</button>
`;

exports[`Storyshots Shared/UI/Card/BaseCard No Rounded 1`] = `
<div
  className="css-gitq5l-BaseCard eck2yil0"
>
  <div>
    Hello here
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Card/BaseCard Not Centered 1`] = `
<div
  className="css-cfu4k3-BaseCard eck2yil0"
>
  <div>
    Hello here
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Card/BaseCard Primary 1`] = `
<div
  className="css-4oanin-BaseCard eck2yil0"
>
  <div>
    Hello here
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Card/BaseCard Secondary 1`] = `
<div
  className="css-1fwyafo-BaseCard eck2yil0"
  color="bgPrimary"
>
  <div>
    Hello here
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Card/BaseCard Without Shadow 1`] = `
<div
  className="css-jqlmnb-BaseCard eck2yil0"
>
  <div>
    Hello here
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Card/TitledCard Primary 1`] = `
<div
  className="css-4oanin-BaseCard eck2yil0"
  color="bgSecondary"
>
  <div
    className="css-12qcvlk-TitledCard"
  >
    <h2
      className="css-13xwp29-Typography e1eqcpp10"
    >
      Card
    </h2>
  </div>
  <div
    className="css-7mpaxq-TitledCard"
  >
    <div>
      Hello here
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Input Date 1`] = `
<div
  className="css-18px25j-Input"
>
  <input
    className="css-1wt2cer-Component"
    defaultValue=""
    id="test"
    placeholder=" "
    type="date"
  />
  <label
    className="css-75pfc2-Typography-Input e1eqcpp10"
    htmlFor="test"
  >
    Label
     
  </label>
</div>
`;

exports[`Storyshots Shared/UI/Form/Input Password 1`] = `
<div
  className="css-18px25j-Input"
>
  <input
    className="css-1wt2cer-Component"
    defaultValue=""
    id="test"
    placeholder=" "
    type="password"
  />
  <label
    className="css-75pfc2-Typography-Input e1eqcpp10"
    htmlFor="test"
  >
    Label
     
  </label>
</div>
`;

exports[`Storyshots Shared/UI/Form/Input Primary 1`] = `
<div
  className="css-18px25j-Input"
>
  <input
    className="css-1wt2cer-Component"
    defaultValue=""
    id="test"
    placeholder=" "
    type="text"
  />
  <label
    className="css-75pfc2-Typography-Input e1eqcpp10"
    htmlFor="test"
  >
    Label
     
  </label>
</div>
`;

exports[`Storyshots Shared/UI/Form/Input Time 1`] = `
<div
  className="css-18px25j-Input"
>
  <input
    className="css-1wt2cer-Component"
    defaultValue=""
    id="test"
    placeholder=" "
    type="time"
  />
  <label
    className="css-75pfc2-Typography-Input e1eqcpp10"
    htmlFor="test"
  >
    Label
     
  </label>
</div>
`;

exports[`Storyshots Shared/UI/Form/Input With Custom Error 1`] = `
<div
  className="css-u0ps3g-Input"
>
  <input
    className="css-17v1x3b-Component"
    defaultValue=""
    id="test"
    placeholder=" "
    type="text"
  />
  <label
    className="css-75pfc2-Typography-Input e1eqcpp10"
    htmlFor="test"
  >
    Label
     
  </label>
  <div
    className="css-safnee-Error"
  >
    <div>
      A custom error
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Input With Custom Hint 1`] = `
<div
  className="css-18px25j-Input"
>
  <input
    className="css-1wt2cer-Component"
    defaultValue=""
    id="test"
    placeholder=" "
    type="text"
  />
  <label
    className="css-75pfc2-Typography-Input e1eqcpp10"
    htmlFor="test"
  >
    Label
     
  </label>
  <div
    className="css-1y0sv9c-Hint"
  >
    <div>
      A custom hint
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Input With Text Error 1`] = `
<div
  className="css-u0ps3g-Input"
>
  <input
    className="css-17v1x3b-Component"
    defaultValue=""
    id="test"
    placeholder=" "
    type="text"
  />
  <label
    className="css-75pfc2-Typography-Input e1eqcpp10"
    htmlFor="test"
  >
    Label
     
  </label>
  <div
    className="css-safnee-Error"
  >
    <span
      className="css-8e1tv0-Typography-Error e1eqcpp10"
      fontSize="small"
    >
      This is an error
    </span>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Input With Text Hint 1`] = `
<div
  className="css-18px25j-Input"
>
  <input
    className="css-1wt2cer-Component"
    defaultValue=""
    id="test"
    placeholder=" "
    type="text"
  />
  <label
    className="css-75pfc2-Typography-Input e1eqcpp10"
    htmlFor="test"
  >
    Label
     
  </label>
  <div
    className="css-1y0sv9c-Hint"
  >
    <span
      className="css-19hly3h-Typography e1eqcpp10"
      fontSize="small"
    >
      A useful hint to help you out
    </span>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Form/Select Primary 1`] = `
<div
  className="css-w2vxd-Select"
>
  <div
    className="css-1q842lx-Select"
  >
    <span
      className="css-6wlsgl-Typography-Select e1eqcpp10"
      id="headlessui-listbox-label-13"
      onClick={[Function]}
    >
      Label
       
    </span>
  </div>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="css-ct7fri-Select"
    disabled={false}
    id="headlessui-listbox-button-14"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="css-1e4o3l6-Typography-Select e1eqcpp10"
    >
      Test1
    </span>
    <span
      className="css-1qj0y8s-Typography-Select e1eqcpp10"
    >
      <svg
        aria-hidden="true"
        className="css-1k7mggg-Select"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Select With Error 1`] = `
Array [
  <div
    className="css-w2vxd-Select"
  >
    <div
      className="css-1q842lx-Select"
    >
      <span
        className="css-1k4snd3-Typography-Select e1eqcpp10"
        id="headlessui-listbox-label-15"
        onClick={[Function]}
      >
        Label
         
      </span>
    </div>
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="css-13xq215-Select"
      disabled={false}
      id="headlessui-listbox-button-16"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      <span
        className="css-1e4o3l6-Typography-Select e1eqcpp10"
      >
        Test1
      </span>
      <span
        className="css-1qj0y8s-Typography-Select e1eqcpp10"
      >
        <svg
          aria-hidden="true"
          className="css-1k7mggg-Select"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>,
  <div
    className="css-safnee-Error"
  >
    <span
      className="css-8e1tv0-Typography-Error e1eqcpp10"
      fontSize="small"
    >
      This is an error
    </span>
  </div>,
]
`;

exports[`Storyshots Shared/UI/Form/Select With Hint 1`] = `
Array [
  <div
    className="css-w2vxd-Select"
  >
    <div
      className="css-1q842lx-Select"
    >
      <span
        className="css-6wlsgl-Typography-Select e1eqcpp10"
        id="headlessui-listbox-label-17"
        onClick={[Function]}
      >
        Label
         
      </span>
    </div>
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="css-ct7fri-Select"
      disabled={false}
      id="headlessui-listbox-button-18"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      <span
        className="css-1e4o3l6-Typography-Select e1eqcpp10"
      >
        Test1
      </span>
      <span
        className="css-1qj0y8s-Typography-Select e1eqcpp10"
      >
        <svg
          aria-hidden="true"
          className="css-1k7mggg-Select"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>,
  <div
    className="css-1y0sv9c-Hint"
  >
    <span
      className="css-19hly3h-Typography e1eqcpp10"
      fontSize="small"
    >
      This is a hint
    </span>
  </div>,
]
`;

exports[`Storyshots Shared/UI/Form/Select With Placeholder 1`] = `
<div
  className="css-w2vxd-Select"
>
  <div
    className="css-1q842lx-Select"
  >
    <span
      className="css-6wlsgl-Typography-Select e1eqcpp10"
      id="headlessui-listbox-label-21"
      onClick={[Function]}
    >
      Label
       
    </span>
  </div>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="css-ct7fri-Select"
    disabled={false}
    id="headlessui-listbox-button-22"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="css-1e4o3l6-Typography-Select e1eqcpp10"
    >
      Please select an option wisely
    </span>
    <span
      className="css-1qj0y8s-Typography-Select e1eqcpp10"
    >
      <svg
        aria-hidden="true"
        className="css-1k7mggg-Select"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Select With Reset Option 1`] = `
<div
  className="css-w2vxd-Select"
>
  <div
    className="css-1q842lx-Select"
  >
    <span
      className="css-6wlsgl-Typography-Select e1eqcpp10"
      id="headlessui-listbox-label-19"
      onClick={[Function]}
    >
      Label
       
    </span>
  </div>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="css-ct7fri-Select"
    disabled={false}
    id="headlessui-listbox-button-20"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="css-1e4o3l6-Typography-Select e1eqcpp10"
    >
      Test1
    </span>
    <span
      className="css-1qj0y8s-Typography-Select e1eqcpp10"
    >
      <svg
        aria-hidden="true"
        className="css-1k7mggg-Select"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch Bottom 1`] = `
<div
  className="css-1halu6f-Switch"
>
  <button
    aria-checked={true}
    aria-labelledby="headlessui-label-30"
    className="css-1tiw86o-Switch"
    id="headlessui-switch-29"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
  >
    <label
      className="css-so2e4e-Switch"
    >
      Switch
    </label>
    <span
      className="css-1m6lgjs-Switch"
    />
  </button>
  <span
    className="css-1xggxmq-Typography-Label e1eqcpp10"
    id="headlessui-label-30"
    onClick={[Function]}
  >
    Switch
  </span>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch Disabled 1`] = `
<div
  className="css-gxbv2c-Switch"
>
  <span
    className="css-15v5hy3-Typography-Label e1eqcpp10"
    id="headlessui-label-35"
    onClick={[Function]}
  >
    Switch
  </span>
  <button
    aria-checked={true}
    aria-labelledby="headlessui-label-35"
    className="css-1g1l4v0-Switch"
    id="headlessui-switch-36"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
  >
    <label
      className="css-so2e4e-Switch"
    >
      Switch
    </label>
    <span
      className="css-1k4uabd-Switch"
    />
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch Hidden 1`] = `
<div
  className="css-1dgmue2-Switch"
>
  <button
    aria-checked={true}
    className="css-1tiw86o-Switch"
    id="headlessui-switch-31"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
  >
    <label
      className="css-so2e4e-Switch"
    >
      Switch
    </label>
    <span
      className="css-1m6lgjs-Switch"
    />
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch Not Checked 1`] = `
<div
  className="css-gxbv2c-Switch"
>
  <span
    className="css-1xggxmq-Typography-Label e1eqcpp10"
    id="headlessui-label-33"
    onClick={[Function]}
  >
    Switch
  </span>
  <button
    aria-checked={false}
    aria-labelledby="headlessui-label-33"
    className="css-5y9lu-Switch"
    id="headlessui-switch-34"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
  >
    <label
      className="css-so2e4e-Switch"
    >
      Switch
    </label>
    <span
      className="css-lmfnk8-Switch"
    />
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch Primary 1`] = `
<div
  className="css-gxbv2c-Switch"
>
  <span
    className="css-1xggxmq-Typography-Label e1eqcpp10"
    id="headlessui-label-23"
    onClick={[Function]}
  >
    Switch
  </span>
  <button
    aria-checked={true}
    aria-labelledby="headlessui-label-23"
    className="css-1tiw86o-Switch"
    id="headlessui-switch-24"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
  >
    <label
      className="css-so2e4e-Switch"
    >
      Switch
    </label>
    <span
      className="css-1m6lgjs-Switch"
    />
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch Right 1`] = `
<div
  className="css-gxbv2c-Switch"
>
  <button
    aria-checked={true}
    aria-labelledby="headlessui-label-26"
    className="css-1tiw86o-Switch"
    id="headlessui-switch-25"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
  >
    <label
      className="css-so2e4e-Switch"
    >
      Switch
    </label>
    <span
      className="css-1m6lgjs-Switch"
    />
  </button>
  <span
    className="css-1xggxmq-Typography-Label e1eqcpp10"
    id="headlessui-label-26"
    onClick={[Function]}
  >
    Switch
  </span>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch Top 1`] = `
<div
  className="css-1halu6f-Switch"
>
  <span
    className="css-1xggxmq-Typography-Label e1eqcpp10"
    id="headlessui-label-27"
    onClick={[Function]}
  >
    Switch
  </span>
  <button
    aria-checked={true}
    aria-labelledby="headlessui-label-27"
    className="css-1tiw86o-Switch"
    id="headlessui-switch-28"
    onClick={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    role="switch"
    tabIndex={0}
  >
    <label
      className="css-so2e4e-Switch"
    >
      Switch
    </label>
    <span
      className="css-1m6lgjs-Switch"
    />
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch With Double Text 1`] = `
<div
  className="flex flex-row gap-2"
>
  <span
    className="css-1vlagpw-Typography e1eqcpp10"
  >
    Left
  </span>
  <div
    className="css-1dgmue2-Switch"
  >
    <button
      className="css-5y9lu-Switch"
      id="headlessui-switch-32"
      onClick={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="switch"
      tabIndex={0}
    >
      <label
        className="css-so2e4e-Switch"
      >
        Label
      </label>
      <span
        className="css-lmfnk8-Switch"
      />
    </button>
  </div>
  <span
    className="css-1vlagpw-Typography e1eqcpp10"
  >
    Right
  </span>
</div>
`;

exports[`Storyshots Shared/UI/Form/Switch With Error 1`] = `
Array [
  <div
    className="css-gxbv2c-Switch"
  >
    <span
      className="css-1xggxmq-Typography-Label e1eqcpp10"
      id="headlessui-label-39"
      onClick={[Function]}
    >
      Switch
    </span>
    <button
      aria-checked={true}
      aria-labelledby="headlessui-label-39"
      className="css-kqmpa8-Switch"
      id="headlessui-switch-40"
      onClick={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="switch"
      tabIndex={0}
    >
      <label
        className="css-so2e4e-Switch"
      >
        Switch
      </label>
      <span
        className="css-1m6lgjs-Switch"
      />
    </button>
  </div>,
  <div
    className="css-safnee-Error"
  >
    <span
      className="css-8e1tv0-Typography-Error e1eqcpp10"
      fontSize="small"
    >
      This is an error
    </span>
  </div>,
]
`;

exports[`Storyshots Shared/UI/Form/Switch With Hint 1`] = `
Array [
  <div
    className="css-gxbv2c-Switch"
  >
    <span
      className="css-1xggxmq-Typography-Label e1eqcpp10"
      id="headlessui-label-37"
      onClick={[Function]}
    >
      Switch
    </span>
    <button
      aria-checked={true}
      aria-labelledby="headlessui-label-37"
      className="css-1tiw86o-Switch"
      id="headlessui-switch-38"
      onClick={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      role="switch"
      tabIndex={0}
    >
      <label
        className="css-so2e4e-Switch"
      >
        Switch
      </label>
      <span
        className="css-1m6lgjs-Switch"
      />
    </button>
  </div>,
  <div
    className="css-1y0sv9c-Hint"
  >
    <span
      className="css-19hly3h-Typography e1eqcpp10"
      fontSize="small"
    >
      A useful hint here
    </span>
  </div>,
]
`;

exports[`Storyshots Shared/UI/IconButton Contained 1`] = `
<button
  className="css-1xxozgk-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Disabled 1`] = `
<button
  className="css-1spcpzm-Button e1p27jrl0"
  disabled={true}
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Full Width 1`] = `
<button
  className="css-14vwuej-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Large 1`] = `
<button
  className="css-15wiyrp-Button e1p27jrl0"
  size="large"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Link 1`] = `
<a
  className="css-70sqgc-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</a>
`;

exports[`Storyshots Shared/UI/IconButton Medium 1`] = `
<button
  className="css-1xxozgk-Button e1p27jrl0"
  size="medium"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton No Shadow 1`] = `
<button
  className="css-jccqdr-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Outlined 1`] = `
<button
  className="css-3ql8e7-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Primary 1`] = `
<button
  className="css-1xxozgk-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Rounded 1`] = `
<button
  className="css-1j7bi6p-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Secondary 1`] = `
<button
  className="css-10ji96a-Button e1p27jrl0"
  color="secondary"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Small 1`] = `
<button
  className="css-1xxozgk-Button e1p27jrl0"
  size="medium"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/IconButton Text 1`] = `
<button
  className="css-h5zwan-Button e1p27jrl0"
>
  <span
    className="css-1339mxi-IconButton"
  >
    <svg
      className="h-6 w-6 text-white"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    My Icon here
  </span>
</button>
`;

exports[`Storyshots Shared/UI/Loaders/LinearIndicator Primary 1`] = `
<div
  className="css-199uqow-LinearIndicator"
>
  <div
    className="css-1j3bg6v-Component"
  >
    <div
      className="shim css-p8h9f7-LinearIndicator"
    />
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Loaders/Spinner Primary 1`] = `
<div
  className="css-nc1i2i-Spinner"
>
  <div
    className="css-7cvwhs-Spinner"
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Custom 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
    style={
      Object {
        "height": "342px",
        "width": "342px",
      }
    }
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Large 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Medium 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
    style={
      Object {
        "height": "192px",
        "width": "192px",
      }
    }
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Primary 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
    style={
      Object {
        "height": "192px",
        "width": "192px",
      }
    }
  />
</div>
`;

exports[`Storyshots Shared/UI/Logo Small 1`] = `
<div>
  <img
    alt="Forest Restoration logo"
    src="test-file-stub"
    style={
      Object {
        "height": "86px",
        "width": "86px",
      }
    }
  />
</div>
`;

exports[`Storyshots Shared/UI/Modal Custom Footer 1`] = `
<div>
  <button
    className="css-1xxozgk-Button e1p27jrl0"
    onClick={[Function]}
  >
    open
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Modal Full Screen 1`] = `
<div>
  <button
    className="css-1xxozgk-Button e1p27jrl0"
    onClick={[Function]}
  >
    open
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Modal Full Width 1`] = `
<div>
  <button
    className="css-1xxozgk-Button e1p27jrl0"
    onClick={[Function]}
  >
    open
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Modal Primary 1`] = `
<div>
  <button
    className="css-1xxozgk-Button e1p27jrl0"
    onClick={[Function]}
  >
    open
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Modal With Content 1`] = `
<div>
  <button
    className="css-1xxozgk-Button e1p27jrl0"
    onClick={[Function]}
  >
    open
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Popover Primary 1`] = `
<div
  className="css-udih9e-Template"
>
  <div
    className="css-17d5uml-Popover"
  >
    <button
      aria-expanded={false}
      className="css-127wkzg-Button-Popover e1p27jrl0"
      id="headlessui-popover-button-5"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      <span
        className="css-1vlagpw-Typography e1eqcpp10"
      >
        Popover
      </span>
      <svg
        aria-hidden="true"
        className="css-1s4dgj4-Popover"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
          fillRule="evenodd"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/Popover Top 1`] = `
<div
  className="css-udih9e-Template"
>
  <div
    className="css-17d5uml-Popover"
  >
    <button
      aria-expanded={false}
      className="css-127wkzg-Button-Popover e1p27jrl0"
      id="headlessui-popover-button-8"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      <span
        className="css-1vlagpw-Typography e1eqcpp10"
      >
        Popover
      </span>
      <svg
        aria-hidden="true"
        className="css-1s4dgj4-Popover"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
          fillRule="evenodd"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Shared/UI/SideDrawer Primary 1`] = `
<div>
  <button
    className="css-1xxozgk-Button e1p27jrl0"
    onClick={[Function]}
  >
    open
  </button>
</div>
`;

exports[`Storyshots Shared/UI/SideDrawer Right 1`] = `
<div>
  <button
    className="css-1xxozgk-Button e1p27jrl0"
    onClick={[Function]}
  >
    open
  </button>
</div>
`;

exports[`Storyshots Shared/UI/Toast Custom 1`] = `
Array [
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "bottom": 16,
        "left": 16,
        "pointerEvents": "none",
        "position": "fixed",
        "right": 16,
        "top": 16,
        "zIndex": 9999,
      }
    }
  />,
  <button
    className="css-1xxozgk-Button e1p27jrl0"
    onClick={[Function]}
  >
    Show Toast
  </button>,
]
`;

exports[`Storyshots Shared/UI/Toast Custom JSX 1`] = `
Array [
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "bottom": 16,
        "left": 16,
        "pointerEvents": "none",
        "position": "fixed",
        "right": 16,
        "top": 16,
        "zIndex": 9999,
      }
    }
  />,
  <button
    className="css-1xxozgk-Button e1p27jrl0"
    onClick={[Function]}
  >
    Show Toast
  </button>,
]
`;

exports[`Storyshots Shared/UI/Toast Error 1`] = `
Array [
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "bottom": 16,
        "left": 16,
        "pointerEvents": "none",
        "position": "fixed",
        "right": 16,
        "top": 16,
        "zIndex": 9999,
      }
    }
  />,
  <button
    className="css-1xxozgk-Button e1p27jrl0"
    onClick={[Function]}
  >
    Show Toast
  </button>,
]
`;

exports[`Storyshots Shared/UI/Toast Loading 1`] = `
Array [
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "bottom": 16,
        "left": 16,
        "pointerEvents": "none",
        "position": "fixed",
        "right": 16,
        "top": 16,
        "zIndex": 9999,
      }
    }
  />,
  <button
    className="css-1xxozgk-Button e1p27jrl0"
    onClick={[Function]}
  >
    Show Toast
  </button>,
]
`;

exports[`Storyshots Shared/UI/Toast Primary 1`] = `
Array [
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "bottom": 16,
        "left": 16,
        "pointerEvents": "none",
        "position": "fixed",
        "right": 16,
        "top": 16,
        "zIndex": 9999,
      }
    }
  />,
  <button
    className="css-1xxozgk-Button e1p27jrl0"
    onClick={[Function]}
  >
    Show Toast
  </button>,
]
`;

exports[`Storyshots Shared/UI/Toast Success 1`] = `
Array [
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "bottom": 16,
        "left": 16,
        "pointerEvents": "none",
        "position": "fixed",
        "right": 16,
        "top": 16,
        "zIndex": 9999,
      }
    }
  />,
  <button
    className="css-1xxozgk-Button e1p27jrl0"
    onClick={[Function]}
  >
    Show Toast
  </button>,
]
`;

exports[`Storyshots Shared/UI/Typography Body 1`] = `
<span
  className="css-1xfeocz-Typography e1eqcpp10"
>
  My Body 1
</span>
`;

exports[`Storyshots Shared/UI/Typography Body 2 1`] = `
<span
  className="css-4dbfqp-Typography e1eqcpp10"
>
  My Body 2
</span>
`;

exports[`Storyshots Shared/UI/Typography Bold 1`] = `
<span
  className="css-ymkt3d-Typography e1eqcpp10"
  fontWeight="bold"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Heading 1`] = `
<h2
  className="css-13xwp29-Typography e1eqcpp10"
>
  My Heading
</h2>
`;

exports[`Storyshots Shared/UI/Typography Italic 1`] = `
<span
  className="css-c4687g-Typography e1eqcpp10"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Light 1`] = `
<span
  className="css-n3t3bp-Typography e1eqcpp10"
  fontWeight="light"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Noto Serif 1`] = `
<span
  className="css-sicm3t-Typography e1eqcpp10"
  fontFamily="notoSerif"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Primary 1`] = `
<span
  className="css-1xfeocz-Typography e1eqcpp10"
>
  My Typography
</span>
`;

exports[`Storyshots Shared/UI/Typography Primary Color 1`] = `
<span
  className="css-schob0-Typography e1eqcpp10"
  color="primary"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Sans 1`] = `
<span
  className="css-1vlagpw-Typography e1eqcpp10"
  fontFamily="sans"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Secondary Color 1`] = `
<span
  className="css-13tdw6e-Typography e1eqcpp10"
  color="secondary"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Text Primary Color 1`] = `
<span
  className="css-1vlagpw-Typography e1eqcpp10"
  color="textPrimary"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Text Secondary Color 1`] = `
<span
  className="css-1au5wh6-Typography e1eqcpp10"
  color="textSecondary"
>
  My Text
</span>
`;

exports[`Storyshots Shared/UI/Typography Underlined 1`] = `
<span
  className="css-14lvqru-Typography e1eqcpp10"
>
  My Text
</span>
`;
